# awoo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-release.yml  rust.yml  test.yml
src/: args.rs  debug.rs  fs.rs  hasher.rs  main.rs  progress.rs
