[package]
edition = "2021"
name = "awoo"
version = "0.0.5"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1"
blake3 = { version = "1.5", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
indicatif = "0.17"
jwalk = "0.8"
libc = "0.2"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xattr = "1"

[dev-dependencies]
tempfile = "3.27.0"
